update the openapi spec
