# go/model__subscribe_event_data.go
@@ -1,47 +1,0 @@
-/*
- * test
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 0.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type SubscribeEventData struct {
-
-	EventType string `json:"eventType"`
-
-	EventId string `json:"eventId"`
-
-	EventSource string `json:"eventSource"`
-}
-
-// AssertSubscribeEventDataRequired checks if the required fields are not zero-ed
-func AssertSubscribeEventDataRequired(obj SubscribeEventData) error {
-	elements := map[string]interface{}{
-		"eventType": obj.EventType,
-		"eventId": obj.EventId,
-		"eventSource": obj.EventSource,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	return nil
-}
-
-// AssertRecurseSubscribeEventDataRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of SubscribeEventData (e.g. [][]SubscribeEventData), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseSubscribeEventDataRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aSubscribeEventData, ok := obj.(SubscribeEventData)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertSubscribeEventDataRequired(aSubscribeEventData)
-	})
-}
